@@ -18,6 +18,8 @@ Post-v2.15.0
      * OVS validated with DPDK 20.11.1. It is recommended to use this version
        until further releases.
      * New debug appctl command 'dpdk/get-malloc-stats'.
+     * Add hardware offload support for tunnel pop action (experimental).
+       Available only if DPDK experimantal APIs enabled during the build.
    - ovsdb-tool:
      * New option '--election-timer' to the 'create-cluster' command to set the
        leader election timer during cluster creation.
